--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,3 +37,11 @@ html.dark {
   width: 100%;
   height: 2px;
 }
+
+* {
+  -ms-user-select: none; /* IE 10+ */
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
