--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -1,9 +1,12 @@
 * {
-  // font-family: "Noto Sans JP" !important;
   font-family: var(--ion-default-font-family) !important;
   -ms-user-select: none; /* IE 10+ */
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
   user-select: none;
+}
+
+.result-coop-wave {
+  display: flex;
 }
