--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -1,5 +1,16 @@
 * {
   font-family: var(--ion-default-font-family) !important;
+}
+
+ion-label {
+  -ms-user-select: none; /* IE 10+ */
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+ion-item {
   -ms-user-select: none; /* IE 10+ */
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
